WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165938
Fix validation of non-void if blocks with no else
https://bugs.webkit.org/show_bug.cgi?id=165938
Summary
Fix validation of non-void if blocks with no else
Keith Miller
Reported
2016-12-15 18:01:22 PST
Fix validation of non-void if blocks with no else
Attachments
Patch
(4.59 KB, patch)
2016-12-15 18:04 PST
,
Keith Miller
saam
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-12-15 18:04:24 PST
Created
attachment 297270
[details]
Patch
WebKit Commit Bot
Comment 2
2016-12-15 18:28:57 PST
Comment on
attachment 297270
[details]
Patch Rejecting
attachment 297270
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 297270, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/2733165
Keith Miller
Comment 3
2016-12-15 18:39:12 PST
Committed
r209899
: <
http://trac.webkit.org/changeset/209899
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug