Fix validation of non-void if blocks with no else https://bugs.webkit.org/show_bug.cgi?id=165938

Reviewed by Saam Barati.

JSTests:

Add a new failing test and a fix an existing one.

* wasm/function-tests/dead-call.js:
* wasm/function-tests/if-no-else-non-void.js: Added.

Source/JavaScriptCore:

We should not have been allowing non-void if-blocks that don't
have an else. Since this causes a value to be placed on the
stack that only appears under some control flow and not another.

* wasm/WasmValidate.cpp:

Canonical link: https://commits.webkit.org/183537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209899 268f45cc-cd09-0410-ab3c-d52691b4dbfc