JSTests/wasm/function-tests/if-no-else-non-void.js
@@ -1,0 +1,16 @@
+import * as assert from '../assert.js';
+import Builder from '../Builder.js';
+
+const builder = (new Builder())
+      .Type().End()
+      .Function().End()
+      .Code()
+          .Function("bad-if", { params: [], ret: "i32" })
+              .I32Const(0)
+              .If("i32", b => b.I32Const(0))
+          .End()
+
+      .End();
+
+const bin = builder.WebAssembly().get();
+assert.throws(() => new WebAssembly.Module(bin), WebAssembly.CompileError, "WebAssembly.Module doesn't validate: If-block had a non-void result type: I32 but had no else-block (evaluating 'new WebAssembly.Module(bin)')");
